deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: devops-app

  template:
    metadata:
      labels:
        app: devops-app

    spec:
      containers:
        - name: devops-container
          image: devops-app:1.0
          ports:
            - containerPort: 8080
