service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-service

spec:
  type: NodePort

  selector:
    app: devops-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30081
